--- a/noticias-random.html
+++ b/noticias-random.html
@@ -34,7 +34,7 @@
   <div style="text-align:center; margin:20px 0;">
     <nav class="nav-comun">
       <a href="noticias.html">Noticias</a>
-      <a href="noticias-random.html" style="color:#ADFF2F; border-color:#ADFF2F;">Noticias Random</a>
+      <a href="noticias-random.html" class="activo" style="color:#ADFF2F; border-color:#ADFF2F;">Noticias Random</a>
     </nav>
   </div>
 
@@ -52,7 +52,7 @@
       <details>
         <summary>Salesforce invertirá mil millones de dólares en México para impulsar IA</summary>
         <p>
-          La empresa anunció una inversión de USD 1.000 millones en México durante los próximos cinco años para expandir operaciones y promover adopción de inteligencia artificial. <sup><a href="#ref2">[2]</a></sup>
+          La empresa anunció una inversión de USD 1.000 millones en México durante los próximos cinco años para expandir operaciones y promover la adopción de inteligencia artificial. <sup><a href="#ref2">[2]</a></sup>
         </p>
       </details>
     </section>
@@ -68,31 +68,31 @@
       </details>
 
       <details>
-        <summary>Pyrocystis fusiformis: dinoflagelado que brilla al molestarlo</summary>
+        <summary><em>Pyrocystis fusiformis</em>: dinoflagelado que brilla al ser perturbado</summary>
         <p>
-          Pyrocystis fusiformis es un dinoflagelado marino que emite luz (bioluminiscencia) cuando es perturbado o agitado. <sup><a href="#ref4">[4]</a></sup>
+          <em>Pyrocystis fusiformis</em> es un dinoflagelado marino que emite luz (bioluminiscencia) cuando es agitado o perturbado. <sup><a href="#ref4">[4]</a></sup>
         </p>
       </details>
 
       <details>
         <summary>“Railroad worm”: gusano que emite diferentes colores de luz</summary>
         <p>
-          El “gusano-tren” (Railroad worm) tiene órganos lumínicos que pueden emitir luz verde-amarilla a lo largo de su cuerpo, y luz roja en la cabeza. <sup><a href="#ref5">[5]</a></sup>
+          El “gusano-tren” (<em>Railroad worm</em>) tiene órganos lumínicos que pueden emitir luz verde-amarilla a lo largo de su cuerpo y luz roja en la cabeza. <sup><a href="#ref5">[5]</a></sup>
         </p>
       </details>
     </section>
-  </main>
 
- <section class="texto-largo" style="border-left:8px solid #ADFF2F;">
-    <h2>Referencias</h2>
-    <ol>
-      <li id="ref1"><a href="https://www.reuters.com/world/americas/world-bank-lifts-latin-america-economic-growth-estimate-2026-2025-10-07/" target="_blank">Reuters — World Bank lifts Latin America growth estimate for 2026</a></li>
-      <li id="ref2"><a href="https://www.reuters.com/world/americas/salesforce-spend-1-billion-mexico-over-next-five-years-drive-ai-adoption-2025-10-08/" target="_blank">Reuters — Salesforce to spend $1 billion in Mexico over next five years</a></li>
-      <li id="ref3"><a href="https://education.nationalgeographic.org/resource/bioluminescence/" target="_blank">National Geographic — Bioluminiscencia (explicación científica)</a></li>
-      <li id="ref4"><a href="https://en.wikipedia.org/wiki/Pyrocystis_fusiformis" target="_blank">Wikipedia — Pyrocystis fusiformis</a></li>
-      <li id="ref5"><a href="https://en.wikipedia.org/wiki/Railroad_worm" target="_blank">Wikipedia — Railroad worm</a></li>
-    </ol>
-  </section>
+    <section class="texto-largo" style="border-left:8px solid #ADFF2F;">
+      <h2>Referencias</h2>
+      <ol>
+        <li id="ref1"><a href="https://www.reuters.com/world/americas/world-bank-lifts-latin-america-economic-growth-estimate-2026-2025-10-07/" target="_blank" rel="noopener noreferrer">Reuters — World Bank lifts Latin America growth estimate for 2026</a></li>
+        <li id="ref2"><a href="https://www.reuters.com/world/americas/salesforce-spend-1-billion-mexico-over-next-five-years-drive-ai-adoption-2025-10-08/" target="_blank" rel="noopener noreferrer">Reuters — Salesforce to spend $1 billion in Mexico over next five years</a></li>
+        <li id="ref3"><a href="https://education.nationalgeographic.org/resource/bioluminescence/" target="_blank" rel="noopener noreferrer">National Geographic — Bioluminiscencia (explicación científica)</a></li>
+        <li id="ref4"><a href="https://en.wikipedia.org/wiki/Pyrocystis_fusiformis" target="_blank" rel="noopener noreferrer">Wikipedia — Pyrocystis fusiformis</a></li>
+        <li id="ref5"><a href="https://en.wikipedia.org/wiki/Railroad_worm" target="_blank" rel="noopener noreferrer">Wikipedia — Railroad worm</a></li>
+      </ol>
+    </section>
+  </main>
 
   <footer>
     &copy; 2025 Hernavia — Proyecto Cultural
