--- a/consultas.html
+++ b/consultas.html
@@ -32,8 +32,8 @@
   <section class="section">
     <h2>Consulta 001</h2>
     <p>
-      Actualmente se está planeando una <strong>votación futura</strong> para elegir el <strong>logo y escudo oficiales</strong> de Hernavia.  
-      Antes de esa etapa, queremos recibir <strong>ideas, bocetos o sugerencias</strong> de la comunidad.  
+      Actualmente se está planeando una votación futura para elegir el logo y escudo oficiales de Hernavia.  
+      Antes de esa etapa, queremos recibir ideas, bocetos o sugerencias de la comunidad.  
       Si deseas participar, puedes enviar tus propuestas a continuación.
     </p>
 
