--- a/simbolos.html
+++ b/simbolos.html
@@ -1,126 +1,142 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Símbolos - Hernavia</title>
-<meta name="description" content="Descubre los símbolos de Hernavia: bandera, lema y himno que representan la identidad de nuestra comunidad.">
-<link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
-<link rel="preload" href="estilo.css" as="style">
-<link rel="stylesheet" href="estilo.css">
-<link rel="canonical" href="https://hernavia.github.io/Hernavia/simbolos.html">
-<meta name="robots" content="index, follow">
-<meta name="author" content="Proyecto Hernavia">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Símbolos - Hernavia</title>
+  <meta name="description" content="Descubre los símbolos de Hernavia: bandera, lema e himno que representan la identidad de nuestra comunidad.">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
+  <link rel="preload" href="estilo.css" as="style">
+  <link rel="stylesheet" href="estilo.css">
+  <link rel="canonical" href="https://hernavia.github.io/Hernavia/simbolos.html">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Proyecto Hernavia">
+</head>
 
 <body>
 <header>
-    <h1>Símbolos de Hernavia</h1>
+  <h1>Símbolos de Hernavia</h1>
 </header>
 
 <nav class="nav-comun">
-    <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
-    <a href="documentos.html">Documentos</a>
-    <a href="noticias.html">Noticias</a>
-    <a href="consultas.html">Consultas</a>
-    <a href="simbolos.html">Símbolos</a>
-    <a href="comounirse.html">¿Cómo unirse?</a>
-    <a href="sugerencias.html">Sugerencias</a>
+  <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
+  <a href="documentos.html">Documentos</a>
+  <a href="noticias.html">Noticias</a>
+  <a href="consultas.html">Consultas</a>
+  <a href="simbolos.html" class="activo">Símbolos</a>
+  <a href="comounirse.html">¿Cómo unirse?</a>
+  <a href="sugerencias.html">Sugerencias</a>
 </nav>
 
 <main class="simbolos-section">
-    <section>
-        <h2>Himno de Hernavia</h2>
-        <div class="himno">
-            <p><strong>Coro:</strong><br>
-            Un sueño de Hernavia unida,<br>
-            buscando la paz e innovación.<br>
-            Hermandad amarilla, un sueño por cumplir,<br>
-            ¡historia hay que hacer ya!</p>
+  <section>
+    <h2>Himno de Hernavia</h2>
+    <div class="himno">
+      <p><strong>Coro:</strong><br>
+      Un sueño de Hernavia unida,<br>
+      buscando la paz e innovación.<br>
+      Hermandad amarilla, un sueño por cumplir,<br>
+      ¡Historia hay que hacer ya!</p>
 
-            <p><strong>Estrofa 1:</strong><br>
-            Verde natural, naturaleza que cuidar,<br>
-            tono singular, innovación al avanzar.<br>
-            Blanco para paz, dice mucho más unión y fraternidad,<br>
-            cohesión, verdad y solidaridad.<br>
-            Amarillo radiante, camino y hermandad,<br>
-            ¡la fuerza del pueblo nos hará avanzar!</p>
+      <p><strong>Estrofa 1:</strong><br>
+      Verde natural, naturaleza que cuidar,<br>
+      tono singular, innovación al avanzar.<br>
+      Blanco para paz, dice mucho más: unión y fraternidad,<br>
+      cohesión, verdad y solidaridad.<br>
+      Amarillo radiante, camino y hermandad,<br>
+      ¡la fuerza del pueblo nos hará avanzar!</p>
 
-            <p><strong>Estrofa 2:</strong><br>
-            Pueblo que avanza con paso constante,<br>
-            honor en la voz y mirada brillante.<br>
-            Astucia y coraje en cada labor,<br>
-            Hernavia florece con fuerza y valor.<br>
-            Con manos sinceras forjamos verdad,<br>
-            soñando el futuro que hoy germinará.</p>
+      <p><strong>Estrofa 2:</strong><br>
+      Pueblo que avanza con paso constante,<br>
+      honor en la voz y mirada brillante.<br>
+      Astucia y coraje en cada labor,<br>
+      Hernavia florece con fuerza y valor.<br>
+      Con manos sinceras forjamos verdad,<br>
+      soñando el futuro que hoy germinará.</p>
 
-            <p><strong>Estrofa 3:</strong><br>
-            Con paso sereno forjamos nuestro andar,<br>
-            como un pueblo fuerte, juntos sin parar.<br>
-            Nuestro sueño crece y no se detendrá,<br>
-            hacia el mañana juntos vamos a marchar.<br>
-            Con lucha y respeto vivir en verdad,<br>
-            ¡la voz hernaviana jamás callará!</p>
-        </div>
-    </section>
+      <p><strong>Estrofa 3:</strong><br>
+      Con paso sereno forjamos nuestro andar,<br>
+      como un pueblo fuerte, juntos sin parar.<br>
+      Nuestro sueño crece y no se detendrá,<br>
+      hacia el mañana juntos vamos a marchar.<br>
+      Con lucha y respeto, vivir en verdad,<br>
+      ¡la voz hernaviana jamás callará!</p>
+    </div>
+  </section>
 
-    <section>
-        <h2>Bandera</h2>
-        <img src="img/bandera.png" alt="Bandera Hernavia" class="bandera" fetchpriority="high">
-        <p>La bandera de Hernavia simboliza la naturaleza, la innovación, la paz y la fraternidad con Colombia.</p>
-    </section>
+  <section>
+    <h2>Bandera</h2>
+    <img src="img/bandera.png" alt="Bandera de Hernavia" class="bandera" fetchpriority="high">
+    <p>
+      La bandera de Hernavia simboliza la naturaleza, la innovación, la paz y la fraternidad con Colombia.
+    </p>
+  </section>
 
-    <section class="section-lema">
-        <h2>Lema y Frase</h2>
-        <p><strong>Lema:</strong> Paz, Naturaleza, Innovación</p>
-        <p><strong>Frase:</strong> Nacidos de un sueño, luchando por cumplirlo.</p>
-    </section>
-    
-    <section class="section">
-  <h2>Preguntas Frecuentes</h2>
+  <section class="section-lema">
+    <h2>Lema y Frase</h2>
+    <p><strong>Lema:</strong> Paz, Naturaleza, Innovación</p>
+    <p><strong>Frase:</strong> Nacidos de un sueño, luchando por cumplirlo.</p>
+  </section>
 
-  <div style="text-align:center;">
-    <button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
-  </div>
+  <section class="section">
+    <h2>Preguntas Frecuentes</h2>
 
-  <div id="faqContainer" class="faq-container" style="display:none; margin-top:20px;">
+    <div style="text-align:center;">
+      <button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
+    </div>
 
-<details class="faq-card">
-  <summary>¿Por qué existe el himno?</summary>
-  <p>El himno fue creado para acercar Hernavia a la gente, fortalecer la identidad de la comunidad y transmitir sus valores de unión, innovación y respeto por la naturaleza.</p>
-</details>
+    <div id="faqContainer" class="faq-container" style="display:none; margin-top:20px;">
+      <details class="faq-card">
+        <summary>¿Por qué existe el himno?</summary>
+        <p>
+          El himno fue creado para acercar Hernavia a la gente, fortalecer la identidad de la comunidad y transmitir sus valores de unión, innovación y respeto por la naturaleza.
+        </p>
+      </details>
 
-<details class="faq-card">
-  <summary>¿Por qué la bandera tiene esos colores?</summary>
-  <p>Los colores fueron elegidos cuidadosamente para representar a Hernavia, el verde simbolisa la naturaleza y el tono marino simboliza el agua y la innovacion, el blanco simboliza la paz union, cohesion, verdad, tranqulidad y demas extenciones de paz, el amarillo simboliza la hermandad con Colombia y la fraternidad </p>
-</details>
+      <details class="faq-card">
+        <summary>¿Por qué la bandera tiene esos colores?</summary>
+        <p>
+          Los colores fueron elegidos cuidadosamente para representar a Hernavia:  
+          el verde simboliza la naturaleza;  
+          el tono marino, el agua y la innovación;  
+          el blanco representa la paz, la unión, la cohesión, la verdad y la tranquilidad;  
+          y el amarillo refleja la hermandad con Colombia y la fraternidad.
+        </p>
+      </details>
 
-<details class="faq-card">
-  <summary>¿Puedo crear un símbolo para Hernavia?</summary>
-  <p>Sí, puedes enviar tu propuesta a alguna de nuestras redes sociales. Podríamos usar tu diseño para complementar los símbolos de Hernavia. También estamos planeando crear un escudo oficial y otras insignias.</p>
-</details>
+      <details class="faq-card">
+        <summary>¿Puedo crear un símbolo para Hernavia?</summary>
+        <p>
+          Sí. Puedes enviar tu propuesta a nuestras redes o formularios. Podríamos usar tu diseño para complementar los símbolos de Hernavia.  
+          Además, se planea crear un escudo oficial y otras insignias.
+        </p>
+      </details>
 
-<details class="faq-card">
-  <summary>¿Qué otros símbolos se planean?</summary>
-  <p>Ademas de los ya existentes tambien se planea un escudo y diversos logos o variantes "sorpresas".</p>
-</details>
-
+      <details class="faq-card">
+        <summary>¿Qué otros símbolos se planean?</summary>
+        <p>
+          Además de los ya existentes, se planea crear un escudo y diversos logotipos o variantes “sorpresa”.
+        </p>
+      </details>
+    </div>
+  </section>
 </main>
 
 <footer>
-    &copy; 2025 Hernavia - Proyecto Cultural
+  &copy; 2025 Hernavia — Proyecto Cultural
 </footer>
 
 <script>
-    // Mostrar / ocultar bloque de preguntas
-    const toggleButton = document.getElementById('toggleFAQ');
-    const faqContainer = document.getElementById('faqContainer');
-    let visible = false;
+  // Mostrar / ocultar bloque de preguntas
+  const toggleButton = document.getElementById('toggleFAQ');
+  const faqContainer = document.getElementById('faqContainer');
+  let visible = false;
 
-    toggleButton.addEventListener('click', () => {
-        visible = !visible;
-        faqContainer.style.display = visible ? 'block' : 'none';
-        toggleButton.textContent = visible ? 'Ocultar Preguntas' : 'Mostrar Preguntas';
-    });
+  toggleButton.addEventListener('click', () => {
+    visible = !visible;
+    faqContainer.style.display = visible ? 'block' : 'none';
+    toggleButton.textContent = visible ? 'Ocultar Preguntas' : 'Mostrar Preguntas';
+  });
 </script>
 </body>
 </html>
